--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Elegant MongoDB driver for Node.js.",
   "main": "lib/index.js",
   "scripts": {
-    "pretest": "./node_modules/.bin/eslint .",
     "test": "node ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha",
     "prepublish": "npm run test"
   },
@@ -41,6 +40,7 @@
   },
   "dependencies": {
     "another-json-schema": "^3.6.0",
+    "bluebird": "^3.5.1",
     "debug": "3.1.0",
     "inflected": "2.0.4",
     "lodash": "4.17.10",
